--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,9 +1,9 @@
 ---
 - question: Отдых и Развлечения
-  hashtag: хэш
+  hashtag: Recreationandentertainment
   items:
     - question: Где на Пхукете заняться йогой?
-      hashtag: Хэш
+      hashtag: yoga  
       ldjson: yes
       answer: |
         * Практика йоги на Пхукете давно развита, кроме обычного отдыха здесь можно круглый год отдыхать и заниматься практикой. В основном здесь преподают Бикрам-йогу, на западный манер ее называют горячая йога или hot yoga, некоторые ее еще называют йогой и баней, а для кого-то это ад. Бикрам не обещает Просветления, но обязательно понравится тем, кто хочет улучшить фигуру, укрепить здоровье и очистить организм от токсинов. Бикрам йога не рекоммендуема людям с повышенным давлением, больным сердцем и сосудами. Горячей йогой необходимо заниматься в специально прогретом помещении, при этом занятия проводятся при температуре примерно сорок градусов, здесь все обильно потеют. Получасовой стандартный комплекс состоит из 26 классических асан из Хатха-йоги, а так же двух дыхательных упражнений совсем несложных. И поверьте Вам этого будет предостаточно. На Пхукете йога-центры ориентированы на туристов из Европы, поэтому здесь преподают на английском, но понимают на занятиях даже те, кто не владеет языком. Для тех, кто в России уже ощутил на себе хот-йогу скорее всего получит удовольствие от нее же только на Пхукете. Более того если йога центр расположен недалеко от того места, где Вы остановились.
@@ -20,17 +20,17 @@
         Meditation Thailand - практика йоги в медитационном ретрите. Здесб работают по схеме все включено, и можно попробовать как йогу, так и Цигун и Гонг-медитацию.
         Советы по хот йоге. На горячую йогу не стоит идти раньше восьми утра, ведь зде ее рано не преподают. Делать ее нужно только натощак. Воду пить нужно до и после занятия, а так же вовремя только теплую. Не пейте так же сок, организм воспринимает как еду. Несмотря на то, что почти все йога-центры находятся возле возле пляжа купаться после йоги не рекомендуется. Подождите минимум тридцать минут. На йогу одевайтесь как можно легче.
     - question: Можно ли прыгнуть с парашютом на Пхукете?
-      hashtag: Хэш
+      hashtag: parachute
       ldjson: yes
       answer: |
         * Надо понимать что такой вид спорта для неподготовленных людей слишком сложный, поэтому лучше всего совершать прыжок с парашютом в тандеме с инструктором. Мало того, в подтверждение прыжка еще и выдадут соответствующий документ, и можно будет дома его показать друзьям. И если есть давняя мечта прыгнуть с парашютом, на Пхукете её можно осуществить.
     - question: Где можно поплавать с дельфинами в Пхукете?
-      hashtag: Хэш
+      hashtag: Dolphins
       ldjson: yes
       answer: |
         *  Не хочется Вас расстраивать, а особенно ребёнка, но на Пхукете нет дельфинария, только мини-океанариум. Мы советуем Вам сводить ребёнка на экскурсию, ведь там находится огромное количество разновидностей рыб. Время работы с 8.30 до 16.30; вход для одного взрослого обойдётся в 100 бат, ну а для ребёнка меньше - 50 бат. А если пойдёте на выходных, увидите как акул кормят. Ну а дельфинарий, где купаются с дельфинами, на сколько я знаю, есть в Чантабури, но это далеко от Пхукета. А вдруг Вы захотите, то дельфинарий работает до 18.00, а для купания с дельфинами отводят около 45 минут.
     - question: Посоветуйте аквапарк на Пхукете?
-      hashtag: Хэш
+      hashtag: aquapark
       ldjson: yes
       answer: |
         * Аквапарки прекрасное место времяпровождения для всей семьи. Конечно, хорошо когда есть несколько аквапарков, и можно выбирать, какой посетить, но на Пхукете только один аквапарк «Splash Jungle», что переводится как «Джунгли-Брызги».
@@ -40,20 +40,20 @@
         Для взрослых экстрималов интересно будет посетить горку Boomerango, которая работает по принципу бумеранга и горку Superbowl, когда отдыхающие буквально проваливаются в бассейн.
         Добраться до аквапарка можно на трансфере, который обойдется дешевле, чем такси или на арендованной машине по трассе 402. Ориентируйтесь на аэропорт Пхукета, аквапарк находится от него недалеко. Работает аквапарк ежедневно с 10.00 до 18.00, билеты стоят дороговато, но если учесть, что Пхукет самое дорогое место отдыха в Таиланде, то цены вполне приемлемые.
 - question: Еда, питание
-  hashtag: хэш
+  hashtag: food
   items:
     - question: Где можно дешево поесть на Пхукете?
-      hashtag: Хэш
+      hashtag: cheapfood
       ldjson: yes
       answer: |
         * Если вы отдыхаете на пляже Карон, то в кафе на этом пляже питаться дороже, чем, например, на Патонге. На Кароне обед на одного человека обойдется от 200-250 бат, на Патонге можно найти кафе и подешевле, от 150 бат на человека за обед. Самая дешевая еда - в местных кафе, где порция риса или лапши с наполнителями (свинина, курица, морепродукты) стоит 50 бат. Так же дешево можно поесть на фудкортах в крупных торговых центрах, где на 100 бат можно хорошо покушать. А так же, как уже отметили, на местных рынках очень вкусная рыба, суши, жаренные куриные ноги. Объяснятся можно на ломанном английском или "на пальцах".
     - question: Сколько стоит покушать на Пхукете?
-      hashtag: Хэш
+      hashtag: howmuchdoesfoodcost
       ldjson: yes
       answer: |
         * В зависимости от ваших вкусовых предпочтений и места, где будет расположен ваш отель. Самое бюджетное место, где можно покушать - Патонг. Здесь можно уложиться на человека в 300 рублей. Бухта Банг Тао самая дорогая. В среднем стоимость нормального ужина или обеда будет в районе 1000 рублей, без алкоголя за двоих.
     - question: Где поесть в районе пляжа Камала Бич?
-      hashtag: Хэш
+      hashtag: Beach
       ldjson: yes
       answer: |
         * Голодными в Калама Бич не останетесь, там вдоль всей береговой линии есть довольно много ресторанов и кафе, где Вы сможете питаться. Цены в кафе средние для Пхукета и Вы вполне сможете пообедать вдвоем за 150-200 бат. Так же местные жители продают на пляже сладкую кукурузу, приготовленную при Вас на мангале. Еще в центральной части побережья есть макашницы и лотки с блинчиками роти, пад таем и другими тайскими блюдами.
@@ -62,15 +62,15 @@
         На главной трассе можно порекомендовать ресторан Ohlala. Здесь готовят тайскую классическую еду, блюда севера Таиланда, в том числе и суп као сой, салат из папайи, и европейскую еду.
         Из более дорогих заведений можно посоветовать ресторан Plum в отеле Cape Sienna. Здесь в меню средиземноморская, европейская и тайская кухня из морепродуктов.
     - question: Где на Пхукете попробовать тайские деликатесы?
-      hashtag: Хэш
+      hashtag: Thaidelicacies
       ldjson: yes
       answer: |
         * Кроме змеиной фермы и соответственно змеиного мяса на Пхукете можно попробовать и другие подобные деликатесы. Прямо на улице есть несколько лотков, на которых продаются несколько видов жареных насекомых. Причем, по признанию тайцев они это не едят, а все готовят для туристов. Особенно русские любят экспериментировать с желудком.
 - question: Проживание
-  hashtag: хэш
+  hashtag: accommodation
   items:
     - question: Где на Пхукете жить дешевле всего?
-      hashtag: Хэш
+      hashtag: cheaphousing
       ldjson: yes
       answer: |
         * Если бюджет вашей поездки ограничен, то самым доступным по стоимости вариантом жилья на Пхукете будет гестхаус. Проще говоря, это гостевой дом, который является отличной альтернативой отелям, апартаментам и прочему арендованному жилью. Мнение о том, что это жилье подходит исключительно на короткий срок не соответствует действительности, многие туристы останавливаются в гестхаусах на месяц и более. Когда на первом месте стоит экономия, то многие готовы пожертвовать многими благами отдыха. Гестхаусы в отличие от отелей не делятся на категории и не имеют звездности. Чаще всего такое жилье представляет собой комнату с санузлом и минимальным набором услуг. Кухня обычно общая, есть гостиная с телевизором. Только в единичных гестхаусах есть бассейны, чаще всего бассейна нет. Принцип аренды такого жилья, такой же как и принцип аренды отелей  это можно сделать он-лайн, через интернет или же забронировать жилье на месте, на стойке рецепшена. Второй вариант лучше, но в высокий сезон могут быть проблемы с наличием свободных мест. Многие туристы отмечают, что ряд трехзвездочных отелей на Пхукете ничем не лучше гестхаусов, а по стоимости в несколько раз дороже.
@@ -79,37 +79,37 @@
         Гестхаусы предлагают широкий выбор услуг, начиная от организации экскурсии и заканчивая предложения по стирки и глажке, но не всегда эти услуги отличаются высоким качеством (особенно это касается стирки). В некоторых гестхаусах в стоимость включен бесплатный интернет, но, как правило, связь такого интернета очень слабая (посмотреть почту хватит, а загрузит видео – вряд ли). Проще всего купить симку у местного оператора и пользоваться мобильным интернетом.
         Кроме депозита в денежной форме, вас попросят оставить ксерокопию паспорта. Ничего страшного в этом нет, а вот если попросят оставить оригинал паспорта, то это повод задуматься над тем стоит останавливаться в этом гестхаусе или лучше подыскать другой вариант (я бы вам советовал паспорт и другие документы никому и ни при каких обстоятельства не оставлять).
     - question: Могут ли заселить в отель в один номер совершеннолетнего парня и несовершеннолетнюю девушку?
-      hashtag: Хэш
+      hashtag: hotelyoung
       ldjson: yes
       answer: |
         * Если документально будет подтверждено Ваше родство, то вопросов не возникнет, но есть ряд отелей, класса люкс, которые настолько дорожат своей репутацией, что могут отказать в заселение, но это будет сделано заранее или же будет предоставлено место в другом отеле, просто на улицу никого не выгонят.
     - question: Какой отель выбрать на Пхукете?
-      hashtag: Хэш
+      hashtag: hotelphuket
       ldjson: yes
       answer: |
         * В двух шагах от пляжа Карон расположен отель Phuket Island View 3*. Только дорогу надо перейти, а так совсем близко к пляжу, примерно метров 50-70. Из "трешек" это один из лучших отелей на Пхукете. Мы платили за двоих в сентябре прошлого года 72 тысячи рублей. Отдыхали неделю, не думаю, что нынче дороже. К отелю вообще никаких претензий не было у нас. Все супер! Питание, уборка, бассейн очень чистый. Анимации не было, что нас очень обрадовало. Из Украины и России совсем мало было отдыхающих. Не знаю, может мы так попали, в такой период времени, но родную речь практически не слышали. Еще очень хорошая "трешка" - Kata Country House 3*, этот отель уже в районе другого пляжа - Ката. Там жили наши друзья, мы ездили к ним в гости. Понравилось, что территория прямо-таки утопает в зелени. Хороший отель по очень лояльной цене. Друзья платили за двоих на две недели около 100 тысяч. Разумеется, цены я привела вместе с перелетом туда-обратно.
 - question: Валюта
-  hashtag: хэш
+  hashtag: currency
   items:
     - question: Где на Пхукете можно поменять рубли?
-      hashtag: Хэш
+      hashtag: exchanger
       ldjson: yes
       answer: |
         * Для начала, конечно, было бы не плохо, если есть возможность, узнать курс бата к рублю и к доллару, который установлен сейчас на о.Пхукет. И потом уже рассчитать выгоду и выбрать валюту. По логике очень не выгодно рубли менять на доллары, а потом доллары на баты. Двойной обмен, а значит и потери двойные.
         Я как-то поехала с долларами и пролетела... Курс рубля к бату был почти 1.1. Получилось с рублями было выгоднее. Теперь в Тай только с рублями сама езжу и друзьям рекомендую.
         По поводу обменных пунктов нет никаких проблем, почти во всех принимают рубли, главное крупными купюрами.
     - question: Как работают обменники в аэропорту Пхукета?
-      hashtag: Хэш
+      hashtag: airportexchange
       ldjson: yes
       answer: |
         * Обменять валюту ночью в аэропорту Пхукета Вы действительно сможете у девушек при выходе из аэропорта. Конечно, курс у них будет очень занижен, но меняйте небольшую сумму денег, чтобы добраться только до отеля. А утром Вы сможете уже обменять валюту в многочисленных пунктах обмена. В аэропорту менять деньги не стоит даже днем, курс там всегда занижен не менее чем на 1,5%.
         В Таиланд лучше всего брать доллары и менять их нужно в банковских обменных пунктах, которые работают с 8.00 утра до 22.00 вечера. В Таиланде существуют банковские обменные пункты и частные лавки по обмену валюты, в которые ходить не стоит, они не предложат Вам выгодный курс обмена валюты. Так же не меняйте деньги в гостинице, там тоже курс обмена занижен.
         Все расчеты в Таиланде производятся в тайских батах, но если валюту Вы нигде не поменяете, таксисты будут рады доставить Вас в отель и примут к оплате доллары. Конечно, цену заломят, но в Таиланде принято торговаться, и стоимость поездки будет зависеть от Вашего умения торговаться.
 - question: Транспорт
-  hashtag: хэш
+  hashtag: transport
   items:
     - question: Могу ли я арендовать автомобиль на Пхукете?
-      hashtag: Хэш
+      hashtag: rentacar
       ldjson: yes
       answer: |
         * Да, можно. Опять же, рекомендуется использовать услугу аренды автомобилей SHA Plus, хотя это не обязательно.
@@ -120,7 +120,7 @@
         * С бюджетными вариантами перемещения прямо из аэропорта получается туговато. Такси обойдется вам в среднем от 1200 до 1800 бат. На стоимость будет влиять расположение вашего отеля, а также умение торговаться. Если язык у вас хорошо подвешен, и вы обладаете неким даром убеждения, то не исключено, что вам удастся немного снизить цену, но в любом случае поездка на такси будет значительно дороже поездки на автобусе. О том, что в аэропорту Пхукета можно арендовать автомобиль вам наверняка известно, но делать этого не стоит. Во-первых, это достаточно дорогое удовольствие, а во-вторых, никто не арендует машину только для того, чтобы доехать с аэропорта Пхукета до Као Лака.
         Если при себе у вас не будет слишком много больших сумок и временные рамки вас не очень ограничивают, то можете попробовать добраться на одном из рейсовых автобусов, правда отправляются они не из аэропорта, но и ехать на автовокзал Пхукета вовсе не обязательно. Недалеко от аэропорта проходит междугородная трасса, куда вы можете добраться на такси или обычном автобусе оранжевого цвета (такие автобусы регулярно отправляются с аэропорта Пхукета). Таксисты и водители автобусов подскажут вам где лучше выйти (если, конечно, будут владеть английским языком). А дальше вам нужно будет ловить автобусы, которые следуют до Сураттани, в Ранонг или до города Такуа Па. Да, в такой поездке вы можете столкнуться с определенными проблемами (особенно не зная языка), но зато в конечном итоге экономия будет на лицо. В общей сложности, поездка до Као Лака обойдется вам не дороже 200 бат, что почти в 10 раз дешевле поездки на такси.
     - question: Как добраться с Пхукета на Рэйли?
-      hashtag: Хэш
+      hashtag: howtogetthere
       ldjson: yes
       answer: |
         * Удобнее всего до Рейли добираться по воде, причем делать это желательно в первой половине дня, так как после обеда рейсы практически не выполняются. Билеты можно приобрести в местных туристических агентствах, которые расположены в разных уголках острова. Обращайте внимание на то, что некоторые паромы отправляются до Краби-тауна, а некоторые непосредственно до Рейли.
@@ -128,37 +128,37 @@
         Вторым способом добраться до Рейли является автобус. В отличие от паромов автобусы отправляются с утра и до самого вечера. Автобусная станция, с которой отправляются автобусы, находится на въезде в город и называется New Bus Station. Но в таком случае вам наверняка придется делать пересадку в Краби-тауне. Стоимость проезда стартует от 400 бат, а по времени поездка растянется примерно на четыре часа.
         Намного быстрее вы можете добраться на такси, но и по деньгам получится значительно дороже – в районе 2500-3000 бат.
 - question: Связь
-  hashtag: хэш
+  hashtag: connection
   items:
     - question: Как пополнять деньги на мобильном телефоне на Пхукете?
-      hashtag: Хэш
+      hashtag: topupconnection
       ldjson: yes
       answer: |
         * Карточки пополнения счета операторов сотовой связи Таиланда (всего на рынке связи 3 оператора), можно приобрести в торговых центрах, магазинах по продаже мобильных телефонов или в круглосуточных минимартах Family Mart и 7-Eleven. Туристы называют их money card. Также, карточки пополнения счета продаются в магазине на первом этаже аэропорта, однако цена там будет завышена, но не критично.
           Еще хочу обратить Ваше внимание  смотрите, сим-карту какого оператора Вам даст туроператор. Худший вариант - True Move – покрытие и качество связи оставляет желать лучшего. Отлично, если это будет карта DTAC Happy, хорошее покрытие и автоматическая активация.
 
 - question: COVID-19
-  hashtag: хэш
+  hashtag: covid19
   items:
     - question: Где я могу найти отели Sha?
-      hashtag: Хэш
+      hashtag: sha
       ldjson: yes
       answer: |
         ### https://shaplushotels.com/ru/
     - question: Сколько сидеть на карантине?
-      hashtag: Хэш
+      hashtag: covid19sitdown
       ldjson: yes
       answer: |
         ### 1-й день находиться в отеле и не выезжать за пределы региона 7 дней по программе SANDBOX
     - question: Полностью вакцинированные путешественники?
-      hashtag: Хэш
+      hashtag: vaqcine
       ldjson: yes
       answer: |
         *  Лица, вакцинированные от Ковид-19 вакциной, одобренной Всемирной Организацией Здравоохранения или Министерством Здравоохранения Таиланда не менее чем за 14 дней до отъезда.
         *  Путешествующие, которые переболели COVID-19 и у которых есть сертификат о выздоровлении от COVID-19 и сертификат о вакцинации одной дозой одобренной вакциной.
         *  Путешественники в возрасте от 12 до 17 лет, путешествующие в Таиланд без сопровождения, должны получить как минимум 1 дозу одобренной вакциной.
     - question: Какие вакцины одобрены Таиландом??
-      hashtag: Хэш
+      hashtag: vac
       ldjson: yes
       answer: |
         ### Одобрены  для программ Test and Go / «Песочница»
@@ -174,14 +174,14 @@
                9. Medigen - 2 doses
                10. Sputnik Light - 1 dose
     - question: Что такое отели SHA Extra+
-      hashtag: Хэш
+      hashtag: shaextra+
       ldjson: yes
       answer: |
         * Отели SHA Extra + это отели, которые соответствуют стандартам «Amazing Thailand Safety and Health Administration» и могут быть использованы в качестве отелей по программе Песочница, а также в качестве мест, которые предназначены для ожидания результатов ваших ПЦР-тестов с обратной транскрипцией по программе Test and Go
         Список всех отелей стандарта «SHA Extra+» доступен на сайте
         https://web.thailandsha.com/shaextraplus
     - question: Как записаться на ПЦР для Пхукета
-      hashtag: Хэш
+      hashtag: pcrphuket
       ldjson: yes
       answer: |
         * Записаться на ПЦР можно прямо на сайте www.thailandpsas.com
