--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -2,6 +2,31 @@
 - question: Отдых и Развлечения
   hashtag: Recreationandentertainment
   items:
+    - question: Где может предложить Пхукет ночные развлечения помимо Патонга? 
+      hashtag: funphucet
+      ldjson: yes
+      answer: |
+       * На пляжах Ката, Карон и Раваи также есть множество баров в традиционном тайском и европейском стиле. Примером может служить диско-бар Lagoon, ночной диско-бар Icon, Reggae Bar.
+         Пхукет-таун, далекий от массового туризма, отличается дружелюбной атмосферой, и все желающие могут посетить многочисленные клубы и бары с живой музыкой и разнообразным репертуаром – Кью, Кор Тор Мор, Софа. Первый особенно понравится любителям бильярда и необычных алкогольных коктейлей.
+         На пляже Лаян есть многоуровневый Dream Club. К услугам посетителей ресторан, два бассейна, четыре бара и ночной клуб. Днем он работает в режиме лаунж: легкие звуки танцевальной музыки, предлагаются безалкогольные напитки и коктейли, вокруг бассейнов расставлены удобные пляжные лежаки и шезлонги. Ночью двери заведения открываются для желающих поужинать, потанцевать и повеселиться у моря.
+         Catch — это стильный ночной клуб и лаунж-бар, предлагающий французский буфет на пляже Сурин. Как и в Dream Beach Club, днем ​​здесь можно расслабиться и, лежа у бассейна, не спеша пить фирменные коктейли. После захода солнца здесь начинает собираться молодежь, чтобы бешено танцевать под местных и зарубежных ди-джеев.
+         Говоря о ночной жизни, нельзя не упомянуть вечеринку на острове Пхи-Пхи-Дон, которую можно посетить в рамках программы тура «11 островов». Ночью десятки баров открывают свои двери, а алкогольные коктейли, продаваемые повсюду в пластиковых ведрах, стали чем-то вроде символа острова. На главном пляже все желающие могут насладиться потрясающим фаер-шоу, постепенно переходящим в вечеринку, масштабы которой сравнимы с вышеупомянутой Бангла-роуд.
+         Надеемся, вы не разочаруетесь на Пхукете ночью и отлично проведете время на острове!
+    - question: Свадьба на Пхукете: как и где отпраздновать этот день?
+      hashtag: marriage
+      ldjson: yes
+      answer: |
+       * Свою свадебную церемонию в Таиланде можно сделать в любом стиле – от классического европейского банкета или пляжной вечеринки до любого необычного сценария праздника. Хотите расписаться на скале? А может быть, под водой? А хотите приехать на свадьбу на слоне? Тайских свадебных организаторов сложно будет чем-либо удивить!
+    - question: Куда можно сходить?
+      hashtag: nigth  
+      ldjson: yes
+      answer: |
+       * Леди-бары Пхукета
+         Бары Гоу-Гоу
+         Диско-клубы и дэнс-клубы
+         Пивные бары
+         Спорт-бары
+         Музыкальные и лаунж-бары
     - question: Где на Пхукете заняться йогой?
       hashtag: yoga  
       ldjson: yes
