--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -2,6 +2,11 @@
 - question: Отдых и Развлечения
   hashtag: Recreationandentertainment
   items:
+    - question: Посоветуйте хороший массажный салон на Пхукете?
+      hashtag: funphucet
+      ldjson: yes
+      answer: |
+       * Хочу сказать, что не первый раз уже летаю отдыхать на Пхукет, причем обычно в одно и то же место (пляж Ката, только отели разные), и каждый год массажисты в салонах меняются. Поэтому каждый год для меня быстро найти хорошего массажиста - это большая удача и изрядная доля везения. Любимый салон у меня один уже на протяжении многих лет - он находится прямо на выходе с пляжа, на перекрестке, наискосок от фонтана со слониками. Сам салон нравится своей чистотой, приятным интерьером и вышколенным персоналом. Цены стабильны для Пхукета уже который год - обычный тай-массаж 300 бат, с алоэ-вера - 500 бат. Есть еще целая куча разнообразных массажей и спа-пакетов услуг. Всё там хорошо, но, как уже писала выше, массажисты каждый год меняются. Найти своего получается не с первого посещения, и хотя все массажисты делают свою работу достаточно профессионально, но найти своего мастера, рукам которого доверишься полностью, не так уж просто. Но для первого посещения и знакомства с экзотической процедурой тайского массажа буду рекомендовать именно этот салон - во всяком случае разочарования Вы точно не испытаете.
     - question: Где может предложить Пхукет ночные развлечения помимо Патонга? 
       hashtag: funphucet
       ldjson: yes
@@ -161,7 +166,11 @@
       answer: |
         * Карточки пополнения счета операторов сотовой связи Таиланда (всего на рынке связи 3 оператора), можно приобрести в торговых центрах, магазинах по продаже мобильных телефонов или в круглосуточных минимартах Family Mart и 7-Eleven. Туристы называют их money card. Также, карточки пополнения счета продаются в магазине на первом этаже аэропорта, однако цена там будет завышена, но не критично.
           Еще хочу обратить Ваше внимание  смотрите, сим-карту какого оператора Вам даст туроператор. Худший вариант - True Move – покрытие и качество связи оставляет желать лучшего. Отлично, если это будет карта DTAC Happy, хорошее покрытие и автоматическая активация.
-
+    - question: Где на Пхукете купить телефон?
+      hashtag: topupconnection
+      ldjson: yes
+      answer: |
+        * Если Ваш английский язык находится на высоте, то приобретать сотовый телефон лучше в торговом центре Джанг Цейлон. Это огромный центр, в котором можно найти все что Вам нужно и цены там действительно намного ниже чем России. Однако, если Вы плохо знаете язык, то лучше приобрести телефон на родине, так как все телефоны на Пхукете ориентированы на иностранных граждан и русского языка в них не предусмотрено.
 - question: COVID-19
   hashtag: covid19
   items:
