--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -72,6 +72,11 @@
 - question: Еда, питание
   hashtag: food
   items:
+    - question: Где на Пхукете поесть мясо крокодила?
+      hashtag:  crocodile
+      ldjson: yes
+      answer: |
+        * В Тайланде блюда из мяса крокодила можно попробовать на крокодильей ферме,куда Вас обязательно привезут на экскурсию. Средняя порция стоит в районе 500 бат. Есть и совсем недорогие супчики из крокодила. На вкус оно напоминают курятину с запахом тины и водорослей. Попробовать один раз, чтоб потом сказать :"А я ел мясо крокодила", конечно, стоит, но вот второй раз меня точно не тянет.
     - question: Где можно дешево поесть на Пхукете?
       hashtag: cheapfood
       ldjson: yes
