--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -2,6 +2,15 @@
 - question: Отдых и Развлечения
   hashtag: Recreationandentertainment
   items:
+    - question: Где покупать экскурсии на Пхукете?
+      hashtag: funphucetex
+      ldjson: yes
+      answer: |
+       * Есть несколько вариантов покупки экскурсии на Пхукете. Самый простой вариант это купить экскурсию у отельного гида. В таком случае вам не придется ничего и никого искать, купите экскурсию на месте, но у такого вариант есть несколько существенных недостатков. Во-первых, стоимость экскурсии у отельного гида будет выше, причем порой выше не на незначительную сумму, а в два и более раз. Во-вторых, чаще всего предложения гида ограничиваются небольшим предложением экскурсий.
+         Второй вариант покупки экскурсии это воспользоваться услугами гидов, которые предлагают свои услуги через разные сайты и социальные сети. В таком случае вам никто не предоставит никаких гарантий, не покажет сертификатов, лицензий. Здесь вы можете ориентироваться только на отзывы туристов и надеяться, что вам повезет. Преимущество такого вида экскурсии в том, что можно поторговаться, обсудить маршрут и детали поездки, поставить какие-то свои условия. Недостатки заключаются в том, что никто вам не даст никаких гарантий безопасности, так как эти люди работают нелегально, и в случае чего, вы даже претензии не сможете никому предъявить. Среди людей, предоставляющих такие услуги, довольно часто встречаются мошенники, так что не нужно делать никакие предоплаты, даже самые минимальные.
+         Более-менее безопасно можно купить экскурсии в уличном агентстве, которых на Пхукете много. В таком агентстве вы можете купить экскурсии дешевле, чем предлагает гид, и выбор там будет гораздо больше. Минусом покупки в таких агентствах является то, что в них не часто можно встретить квалифицированного русскоязычного гида, который смог бы интересно провести экскурсию. Если вы внесли предоплату или полностью оплатили экскурсию, то в случае отказа от поездки деньги вам не вернут. Легальность этих агентств тоже может вызывать сомнение.
+         На Пхукете также можно найти легальные туристические агентства, в которых отличный сервис. Цены выше чем у нелегалов, но все равно получится дешевле чем покупать у отельного гида. Практически в каждом таком агентстве есть профессиональные русскоязычные гиды. Владельцы таких фирм дорожат своей репутацией, поэтому в случае необходимости идут навстречу клиентам и в случае необходимости переносят экскурсии на другие даты. Большинство легальных туристических агентств имеют официальные сайты, где можно не только ознакомиться с предложениями, но и забронировать экскурсию.
+         Если вы не хотите быть обманутым или испытать определенные проблемы с экскурсиями, то лучше не спешить с выбором и покупать в проверенных турагентствах, а не у случайных людей на улицах. Все равно экскурсии покупать вы будете, так как без них провести отдых на Пхукете нереально.
     - question: Посоветуйте хороший массажный салон на Пхукете?
       hashtag: funphucet
       ldjson: yes
@@ -72,6 +81,17 @@
 - question: Еда, питание
   hashtag: food
   items:
+    - question: Где находится ночной рынок на пляже Най-Янг?
+      hashtag:  rinokniayang
+      ldjson: yes
+      answer: |
+        * Рынок на этом пляже есть, но не ночной. Он работает с полудня и примерно до 19 часов и не каждый день, а только три раза в неделю - во вторник, четверг и субботу. Место довольно колоритное и многие туристы ходят туда как на экскурсию. Там можно купить различные овощи, фрукты, прочие продукты, изделия местных ремесленников и многое другое. Рынок расположен в непосредственной близости к пляжу напротив Udom’s Bungalow. Найти его не сложно, так как протяженность пляжа около трех километров и практически любой турист, а тем более местный житель знает об этом рынке.
+    - question: Есть ли на Пхукете Макдональдс?
+      hashtag:  crocodile
+      ldjson: yes
+      answer: |
+        * Рестораны McDonald's на Пхукете есть, причем речь идет не о каком-то одном заведении, а о целой сети. Больше всего их сосредоточено на пляже Патонг, а также есть в популярных среди местных жителей и туристов, торговых центрах Tesco Lotus и Central Festival. Также на Пхукете есть один круглосуточный торговый McDonald's. Его вы сможете найти возле торгового центра Robinson.
+          Что касается разницы между тайским и европейским Макдональдсом, то ее по большому счету нет. Все те же булочки с кунжутом, куриные крылышки, десерты и т.д. Нет, может какие-то особенности есть, но они не принципиальны.
     - question: Где на Пхукете поесть мясо крокодила?
       hashtag:  crocodile
       ldjson: yes
@@ -224,4 +244,11 @@
       ldjson: yes
       answer: |
         * Записаться на ПЦР можно прямо на сайте www.thailandpsas.com
-      
+- question: Правила и Законы
+  hashtag: cpolitica
+  items:
+    - question: Какие правила вывоза животных с Пхукета?
+      hashtag: animalphuket
+      ldjson: yes
+      answer: |
+       * Вывоз животных из Пхукета сопровождается установленными правилами. Прежде всего, у животного должен быть ветеринарный паспорт со всеми указанными необходимыми прививками. Надо подготовить документы для вывоза животного (если его можно вывозить), перечень которых выдаст ветеринарная лечебница. Если надо совершать перелет, о том что будет "лететь" животное, компанию надо заблаговременно оповестить. И надо не забывать что все эти хлопоты ещё и стоят немалых денег.
