--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -252,3 +252,20 @@
       ldjson: yes
       answer: |
        * Вывоз животных из Пхукета сопровождается установленными правилами. Прежде всего, у животного должен быть ветеринарный паспорт со всеми указанными необходимыми прививками. Надо подготовить документы для вывоза животного (если его можно вывозить), перечень которых выдаст ветеринарная лечебница. Если надо совершать перелет, о том что будет "лететь" животное, компанию надо заблаговременно оповестить. И надо не забывать что все эти хлопоты ещё и стоят немалых денег.
+- question: Дети
+  hashtag: children
+  items:
+    - question: Что взять с собой на Пхукет с ребенком?
+      hashtag: pcrphuket
+      ldjson: yes
+      answer: |
+       * Вопрос поездки с ребенком (особенно маленьким) в такую страну как Таиланд потребует от вас большого внимания и концентрации. Пхукет никак нельзя назвать необитаемым островом, наоборот, здесь отличная инфраструктура и вы можете купить все необходимое на месте, но я считаю, что не стоит на это надеяться, а лучше 80-90 процентов необходимого взять с собой. В перечне вещей, необходимых взять с собой должны быть легкие вещи (в том числе и с длинным рукавом), головные уборы, все, что необходимо для купания. В зависимости от финансовых возможностей вы должны решить необходимы ли вам маски, трубки и прочие атрибуты необходимые для отдыха на море или вам проще купить их на месте (я считая, что лучше брать свое, так как у нас эти вещи стоят дешевле и как показывает практика, намного практичнее). Но если вы собрались на отдых с ребенком, то в первую очередь нужно позаботиться о лекарственных препаратах. Во-первых, вы должны понимать, что едете на отдых в совершенно другую страну в плане климатических условий, а во-вторых, вам придется столкнуться с другой пищей, и как на эту смену отреагирует желудок неизвестно. Возьмите препараты от расстройства желудка, против расстройства желудка, жаропонижающее средства. Если есть какие-то хронические заболевания, то не надейтесь, что необходимые лекарства вы купите на Пхукете – необходимое количество препаратов берите с собой.
+         При отдыхе с ребенком (даже и без ребенка) необходимо взять ряд средств, которые защитят вас от комаров. Солнцезащитные крема должны быть с максимальной защитой. Вот крема везти с собой не обязательно, на Пхукете продаются прекрасные средства, которые могут хорошо защитить кожу от воздействия солнечных лучей.
+- question: Погода
+  hashtag: children
+  items:
+    - question: Когда на Пхукете начинается сезон дождей?
+      hashtag: pcrphuket
+      ldjson: yes
+      answer: |
+       * В Пхукете меньше всего осадков бывает с марта по май. В это время там стоит особенно сильная жара. Больше всего дождей в июле. Во все остальные месяцы в году дожди могут идти, но их интенсивность непредсказуема. Некоторые мои знакомые также говорят, что дождей на острове Пхукет также практически не бывает зимой. Но сказать точно не могу, поскольку отдыхал там только весной и летом.
