--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -262,10 +262,22 @@
        * Вопрос поездки с ребенком (особенно маленьким) в такую страну как Таиланд потребует от вас большого внимания и концентрации. Пхукет никак нельзя назвать необитаемым островом, наоборот, здесь отличная инфраструктура и вы можете купить все необходимое на месте, но я считаю, что не стоит на это надеяться, а лучше 80-90 процентов необходимого взять с собой. В перечне вещей, необходимых взять с собой должны быть легкие вещи (в том числе и с длинным рукавом), головные уборы, все, что необходимо для купания. В зависимости от финансовых возможностей вы должны решить необходимы ли вам маски, трубки и прочие атрибуты необходимые для отдыха на море или вам проще купить их на месте (я считая, что лучше брать свое, так как у нас эти вещи стоят дешевле и как показывает практика, намного практичнее). Но если вы собрались на отдых с ребенком, то в первую очередь нужно позаботиться о лекарственных препаратах. Во-первых, вы должны понимать, что едете на отдых в совершенно другую страну в плане климатических условий, а во-вторых, вам придется столкнуться с другой пищей, и как на эту смену отреагирует желудок неизвестно. Возьмите препараты от расстройства желудка, против расстройства желудка, жаропонижающее средства. Если есть какие-то хронические заболевания, то не надейтесь, что необходимые лекарства вы купите на Пхукете – необходимое количество препаратов берите с собой.
          При отдыхе с ребенком (даже и без ребенка) необходимо взять ряд средств, которые защитят вас от комаров. Солнцезащитные крема должны быть с максимальной защитой. Вот крема везти с собой не обязательно, на Пхукете продаются прекрасные средства, которые могут хорошо защитить кожу от воздействия солнечных лучей.
 - question: Погода
-  hashtag: children
+  hashtag:  pogoda
   items:
     - question: Когда на Пхукете начинается сезон дождей?
-      hashtag: pcrphuket
+      hashtag: pododadojd
       ldjson: yes
       answer: |
        * В Пхукете меньше всего осадков бывает с марта по май. В это время там стоит особенно сильная жара. Больше всего дождей в июле. Во все остальные месяцы в году дожди могут идти, но их интенсивность непредсказуема. Некоторые мои знакомые также говорят, что дождей на острове Пхукет также практически не бывает зимой. Но сказать точно не могу, поскольку отдыхал там только весной и летом.
+    - question: Можно ли в декабре позагорать на Пхукете?
+      hashtag: zagardec
+      ldjson: yes
+      answer: |
+	     * Декабрь на Пхукете - самый подходящий месяц для комфортноно отдыха. Температура воздуха днем около 30 градусов, моря - 28 градусов. Нет изнуряющей жары, и именно в этот период можно получить красивый загар. Море спокойное, поэтому можно не только купаться, но и заниматься дайвингом, рыбалкой, кататься на катере. Дождливых дней очень мало - не больше шести. При этом дожди идут проливные и кратковременные, а после них на небе снова появляется яркое солнце. Декабрь - месяц открытия туристического сезона на Пхукете. В честь этого на самом популярном пляже острова Патонге устраивается большой карнавал. Также в начале декабря на Пхукете проходит Королевская парусная регата, приуроченная ко дню рождения Короля. После завершения регаты на пляже Ката устраивается вечеринка с запусканием в небо бумажных фонариков.
+    - question: Какая погода на Пхукете в июне? Не получится ли так, что придется сидеть в отеле из за дождей?
+      hashtag: pogodajuli
+      ldjson: yes
+      answer: |
+       * Остров Пхукет является самым большим среди островов Таиланда по размеру. Климат этого острова теплый, влажный, тропический и формируется под воздействием муссонов. На острове Пхукет существует два сезона это – сухой сезон и сезон дождей. Сухой и теплый сезон длится с ноября по апрель, а сезон дождей продолжается с мая по октябрь.
+         В июне на Пхукете сезон дождей уже начался, но еще не достиг своей наивысшей точки. На острове июнь называют мини-пиком туристического сезона. Погода в это время может быть разной, но если Вы любитель пляжного отдыха рисковать не стоит. Погодные условия острова в июне не совсем комфортные. Погода может быть ветреной, дождливой и море в это время достаточно неспокойное. Хотя многие туристы едут отдыхать в Таиланд именно с сезон дождей из-за низких цен и острых ощущений. Очень любят отдыхать на Пхукете в сезон дождей виндсерферы.
+         Когда ехать отдыхать в Таиланд решать Вам, но июнь не самый плохой месяц отдыхать на Пхукете. Дожди идут в основном ночью, температура воздуха +30 градусов, а вода прогрета до +28 градусов. Более комфортно отдыхать в июне на восточном берегу острова. В этом месте могу посоветовать Вам пляжи Чалонг, Панва и Равай. Еще тихо на Ката-Ной, он защищен от волн островками. Но все равно, если решитесь ехать в июне на Пхукет, следите за алыми флагами на берегу и данными служб спасения.
