--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -124,6 +124,11 @@
 - question: Проживание
   hashtag: accommodation
   items:
+    - question: Подскажите хороший молодежный отель на Пхукете
+      hashtag: hotellyoung
+      ldjson: yes
+      answer: |
+        * Местом концентрации самой веселой и активной молодежи на Пхукете является пляжный курорт Патонг. Здесь находятся самые лучшие ночные клубы острова, go-go бары, дайвинг-центры, секс-клубы. Кроме развитой инфраструктуры здесь отличная береговая линия, довольно чисто, мелкий белоснежный песок. Выбор отелей довольно широкий. Для молодежного отдыха посоветовала бы остановиться в Patong Beach Hotel. Кроме отличного месторасположения (100 метров до моря) и собственного пляжа, в отеле имеется довольно много развлечений: два бассейна, сауна, бильярд, фитнес-центр, теннисные корты, мини-гольф, площадка для волейбола, дайвинг центр, туристическое бюро. За счет того, что здание отеля десятиэтажное, оно вмещает большое количество туристов, поэтому здесь всегда шумно и весело, музыка не прекращается ни днем, ни ночью. В шаговой доступности от Patong Beach Hotel находится самый большой торговый центр Патонга - Джанцейлон, а также главный центр ночной жизни - Бангла Роуд. Большим преимуществом данного отеля считаю также то, что все его номера имеют вид на море! Мебель и ремонт в номерах хороший, видимо, обновляется регулярно. Есть кондиционер, фен, телевизор, мини-сейф. Санузел раздельный, и ванная комната отделяется от спальни стеклянной перегородкой со шторкой - очень необычно. Питание по принципу "все включено", выбор блюд довольно большой, готовят вкусно. Единственным минусом Patong Beach Hotel считаю платный интернет, в качестве альтернативы на ресепшене предлагают приобрести местную карту с 3 G.
     - question: Где на Пхукете жить дешевле всего?
       hashtag: cheaphousing
       ldjson: yes
