--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -17,7 +17,7 @@
       answer: |
        * Хочу сказать, что не первый раз уже летаю отдыхать на Пхукет, причем обычно в одно и то же место (пляж Ката, только отели разные), и каждый год массажисты в салонах меняются. Поэтому каждый год для меня быстро найти хорошего массажиста - это большая удача и изрядная доля везения. Любимый салон у меня один уже на протяжении многих лет - он находится прямо на выходе с пляжа, на перекрестке, наискосок от фонтана со слониками. Сам салон нравится своей чистотой, приятным интерьером и вышколенным персоналом. Цены стабильны для Пхукета уже который год - обычный тай-массаж 300 бат, с алоэ-вера - 500 бат. Есть еще целая куча разнообразных массажей и спа-пакетов услуг. Всё там хорошо, но, как уже писала выше, массажисты каждый год меняются. Найти своего получается не с первого посещения, и хотя все массажисты делают свою работу достаточно профессионально, но найти своего мастера, рукам которого доверишься полностью, не так уж просто. Но для первого посещения и знакомства с экзотической процедурой тайского массажа буду рекомендовать именно этот салон - во всяком случае разочарования Вы точно не испытаете.
     - question: Где может предложить Пхукет ночные развлечения помимо Патонга? 
-      hashtag: funphucet
+      hashtag: funphucett
       ldjson: yes
       answer: |
        * На пляжах Ката, Карон и Раваи также есть множество баров в традиционном тайском и европейском стиле. Примером может служить диско-бар Lagoon, ночной диско-бар Icon, Reggae Bar.
