--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -266,6 +266,36 @@
       answer: |
        * Вопрос поездки с ребенком (особенно маленьким) в такую страну как Таиланд потребует от вас большого внимания и концентрации. Пхукет никак нельзя назвать необитаемым островом, наоборот, здесь отличная инфраструктура и вы можете купить все необходимое на месте, но я считаю, что не стоит на это надеяться, а лучше 80-90 процентов необходимого взять с собой. В перечне вещей, необходимых взять с собой должны быть легкие вещи (в том числе и с длинным рукавом), головные уборы, все, что необходимо для купания. В зависимости от финансовых возможностей вы должны решить необходимы ли вам маски, трубки и прочие атрибуты необходимые для отдыха на море или вам проще купить их на месте (я считая, что лучше брать свое, так как у нас эти вещи стоят дешевле и как показывает практика, намного практичнее). Но если вы собрались на отдых с ребенком, то в первую очередь нужно позаботиться о лекарственных препаратах. Во-первых, вы должны понимать, что едете на отдых в совершенно другую страну в плане климатических условий, а во-вторых, вам придется столкнуться с другой пищей, и как на эту смену отреагирует желудок неизвестно. Возьмите препараты от расстройства желудка, против расстройства желудка, жаропонижающее средства. Если есть какие-то хронические заболевания, то не надейтесь, что необходимые лекарства вы купите на Пхукете – необходимое количество препаратов берите с собой.
          При отдыхе с ребенком (даже и без ребенка) необходимо взять ряд средств, которые защитят вас от комаров. Солнцезащитные крема должны быть с максимальной защитой. Вот крема везти с собой не обязательно, на Пхукете продаются прекрасные средства, которые могут хорошо защитить кожу от воздействия солнечных лучей.
+    - question: Какой пляж лучше на Пхукете для отдыха с детьми?
+      hashtag: childphucet
+      ldjson: yes
+      answer: |
+       * Пляжей на Пхукете очень много, но все зависит от того, что Вы хотите получить от этого отдыха. Если вы предпочитаете активный отдых, то скорее всего Вам подойдет Банг Тао, где кроме отличных песчаных берегов Вы получите максимум адреналина, катаясь на серфинге. Но хочу предупредить сразу, что для размеренного и спокойного купания этот пляж вряд ли подойдет, так как высота волн в прибрежной зоне просто зашкаливает. Это райское место для любителей активного (я бы даже сказал сумасшедшего отдыха). Если же Вы предпочитаете размеренный и спокойный отдых с детьми, то наилучшим местом будут пляжи Патонг. Здесь Вы сможете ощутить всю прелесть солнца, морского бриза и нежного моря. Дети будут просто в восторге от такого отдыха. Что касается вопросов относительно чистоты пляжей, то здесь могу Вам посоветовать воспользоваться туристическими поездками на один день на близлежащие острова, где очень чистая (кристальная) вода и нет никакой суматохи и прочих прочих проблем для прекрасного семейного отдыха.
+    - question: Подходит ли Пхукет для отдыха с детьми?
+      hashtag: childphuccet
+      ldjson: yes
+      answer: |
+       * На острове Пхукет созданы все условия для полноценного отдыха с детьми любого возраста. Хорошо развитая инфраструктура, удачно подобранный период для поездки и капелька смелости – превратят семейный отдых на острове в увлекательное приключение для детей и взрослых.
+    - question: Детские развлечения Пхукета?
+      hashtag: childphuccetfun
+      ldjson: yes
+      answer: |
+       * Отдых с ребенком без активных и разнообразных развлечений просто невозможен. В этом плане Пхукет порадует туристов наличием живописных парков с разно видовыми обитателями (Парк птиц, Королевство тигров, Сад бабочек, аквариум). Для подростков на острове найдется парочка экстремальных развлечений. Юные туристы мужского пола с удовольствием испытают себя на тарзанке Джунгли Баджи Джамп в районе пляжа Ката. Кто из мальчишек откажется совершить прыжок с высоты 50 метров. Главное, чтобы родители разрешили. Также порцию незабываемых впечатлений предоставит юным путешественникам парк с картинг-треками, расположенный недалеко от пляжа Патонг. И для закрепления смелости отважным туристам юного возраста останется только поучаствовать в зорбинге. Особенно эмоциональным получится спуск в огромном шаре с зеленого холма у детей, пробующих это аттракцион впервые.
+         Не придется скучать и туристам с маленькими путешественниками. Для любознательных непосед на острове имеются крытые детские площадки при торговых центрах и отелях. Интересная детская зона под открытым небом имеется в парке Рамы IX в центре Пхукета.
+    - question: Чем кормить ребёнка на острове?
+      hashtag: childphucceteat
+      ldjson: yes
+      answer: |
+       * Первые несколько дней отдыха на Пхукете станут для малышей адаптационными. В это период чад лучше всего кормить знакомыми блюдами и продуктами. Готовые молочные смеси, каши и пюре в баночках проще всего будет купить в супермаркетах. Правда, среди готовых пюре редко попадаются овощные, большей часть представлены детские консервы из местных фруктов. В тех же супермаркетах продаются хлопья, йогурты и молоко, а вот кефир и творожок мне найти не удалось.
+         В магазине Севен-Элевен в районе Ката и супермаркете Семейный продаются кроме прочего готовые сэндвичи в упаковке и вареные яйца.
+         Свежие фрукты и овощи для детей проще всего будет купить на рынке Банзан, который находится на улице Ратутит недалеко от набережной Патонг. Цены на фрукты здесь выше, чем магазинах, но ежедневно подвозится свежий товар и можно купить понравившийся зеленый апельсин или желтый арбуз поштучно.
+         Что же касается готовой еды, то в районе многих пляжей острова работают русские и итальянские рестораны, в меню которых имеется обычное пюре с котлетой или спагетти. Из блюд тайской кухни детям могут прийтись по вкусу жареные овощи (пад пак руам), омлет (кхай тияо) или рис с курицей (кхау мак кхай).
+    - question: Детский врач?
+      hashtag: childphuccetdoc
+      ldjson: yes
+      answer: |
+       * Если во время отдыха на Пхукете возникнет ситуация, требующая вмешательства педиатра, то можно будет обратиться в одну из расположенных на острове больниц. Все они имеют сертификат международного уровня. И при наличии страховки помощь ребенку будет оказана бесплатно. Хороший англоговорящий педиатр принимает в международной клинике Ваттана, которую просто найти в районе пляжа Патонг.
+         Попасть на прием можно в любой день с 9.00 до 19.00. Консультация у детского врача выльется в 500 батт.
 - question: Погода
   hashtag:  pogoda
   items:
