--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -249,7 +249,7 @@
       ldjson: yes
       answer: |
         * Записаться на ПЦР можно прямо на сайте www.thailandpsas.com
-- question: Правила и Законы
+- question: Правила,Законы,Службы
   hashtag: cpolitica
   items:
     - question: Какие правила вывоза животных с Пхукета?
@@ -257,6 +257,18 @@
       ldjson: yes
       answer: |
        * Вывоз животных из Пхукета сопровождается установленными правилами. Прежде всего, у животного должен быть ветеринарный паспорт со всеми указанными необходимыми прививками. Надо подготовить документы для вывоза животного (если его можно вывозить), перечень которых выдаст ветеринарная лечебница. Если надо совершать перелет, о том что будет "лететь" животное, компанию надо заблаговременно оповестить. И надо не забывать что все эти хлопоты ещё и стоят немалых денег.
+    - question: Правила безопасного поведения на Пхукете
+      hashtag: rulles
+      ldjson: yes
+      answer: |
+       * В наши дни в туристическом центре острова повысился уровень преступности. Будьте осторожны, когда знакомитесь с местными на улице.
+         В период летних муссонов можно утонуть, если Вы будете находиться в районе пляжа. Вообще-то местная морская полиция предупреждает об опасности, устанавливая специальные знаки о запрете пребывания на пляже. Летом в 2009 году в сезон муссонов здесь утонуло три человека.
+         Телефон туристической полиции – «1155». С местными «туристическими» полицейскими можно общаться по-английски, уровень владения языком у них хороший. Обычная тайская полиция – дело другое. Если что случится, в конфликте с местными виноваты будете Вы.
+    - question: Полезные телефоны
+      hashtag: call
+      ldjson: yes
+      answer: |
+       * Теперь о полезных телефонах чтоб позвонить в скорую, набирайте 1719 при звонках в национальную миграционную медицинскую службу - 1669 в туристическую полицию Пхукета – «1155», «214368» или «+66(76)254693» в морскую полицию звоните по телефону «215438» или «+66(76)211883» телефон провинциального управления Пхукета – «+66 (76) 211 366» тел. Международного аэропорта Пхукета «+66 (76) 272 306».
 - question: Дети
   hashtag: children
   items:
