--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -121,6 +121,17 @@
       ldjson: yes
       answer: |
         * Кроме змеиной фермы и соответственно змеиного мяса на Пхукете можно попробовать и другие подобные деликатесы. Прямо на улице есть несколько лотков, на которых продаются несколько видов жареных насекомых. Причем, по признанию тайцев они это не едят, а все готовят для туристов. Особенно русские любят экспериментировать с желудком.
+    - question: Где находится ночной рынок на пляже Най-Янг?
+      hashtag:  allin
+      ldjson: yes
+      answer: |
+        * В Таиланде еду готовят на каждом углу - от самого дешевого варианта за пару долларов до обедов лобстерами в дорогих ресторанах морской кухни. Если соскучитесь по родной еде - практически на каждом маленьком острове, не говоря уж о крупных курортах, можно найти русский ресторанчик. А в отелях еда, конечно, неплохая, с фруктами, но несколько неинтересная. Здесь нет египетского и турецкого олл инклюзива, когда Вас будут с утра до ночи закармливать. Плюс, день Вы, все же, будете проводить на пляже, где тоже можно вкусно и недорого поесть - так стоит ли это время тратить на обед в отеле?
+    - question: Есть ли на Пхукете Макдональдс?
+      hashtag:  macdonalds
+      ldjson: yes
+      answer: |
+        * Рестораны McDonald's на Пхукете есть, причем речь идет не о каком-то одном заведении, а о целой сети. Больше всего их сосредоточено на пляже Патонг, а также есть в популярных среди местных жителей и туристов, торговых центрах Tesco Lotus и Central Festival. Также на Пхукете есть один круглосуточный торговый McDonald's. Его вы сможете найти возле торгового центра Robinson.
+          Что касается разницы между тайским и европейским Макдональдсом, то ее по большому счету нет. Все те же булочки с кунжутом, куриные крылышки, десерты и т.д. Нет, может какие-то особенности есть, но они не принципиальны.
 - question: Проживание
   hashtag: accommodation
   items:
