--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -278,7 +278,7 @@
   hashtag: children
   items:
     - question: Что взять с собой на Пхукет с ребенком?
-      hashtag: pcrphuket
+      hashtag:  chdhphuket
       ldjson: yes
       answer: |
        * Вопрос поездки с ребенком (особенно маленьким) в такую страну как Таиланд потребует от вас большого внимания и концентрации. Пхукет никак нельзя назвать необитаемым островом, наоборот, здесь отличная инфраструктура и вы можете купить все необходимое на месте, но я считаю, что не стоит на это надеяться, а лучше 80-90 процентов необходимого взять с собой. В перечне вещей, необходимых взять с собой должны быть легкие вещи (в том числе и с длинным рукавом), головные уборы, все, что необходимо для купания. В зависимости от финансовых возможностей вы должны решить необходимы ли вам маски, трубки и прочие атрибуты необходимые для отдыха на море или вам проще купить их на месте (я считая, что лучше брать свое, так как у нас эти вещи стоят дешевле и как показывает практика, намного практичнее). Но если вы собрались на отдых с ребенком, то в первую очередь нужно позаботиться о лекарственных препаратах. Во-первых, вы должны понимать, что едете на отдых в совершенно другую страну в плане климатических условий, а во-вторых, вам придется столкнуться с другой пищей, и как на эту смену отреагирует желудок неизвестно. Возьмите препараты от расстройства желудка, против расстройства желудка, жаропонижающее средства. Если есть какие-то хронические заболевания, то не надейтесь, что необходимые лекарства вы купите на Пхукете – необходимое количество препаратов берите с собой.
