--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -364,7 +364,7 @@
 - question: Экскурсии 
   hashtag:  travele
   items:
-    - question: Где покупать экскурсии на Пхукете?
+    - question: Где покупать экскурсии в Отеле?
       hashtag: travelephu
       ldjson: yes
       answer: |
